:sparkles: [feat] : 리크루팅아이템 ui

--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -14,3 +14,10 @@ body {
 .swiper-wrapper {
   width: 100% !important;
 }
+
+.clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
