--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: 'Pretendard', sans-serif;
+  -ms-overflow-style: none;
 }
 
 .swiper-wrapper {
@@ -20,4 +21,8 @@ body {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
