:ambulance: [fix] : resolved conflicts

--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -21,3 +21,12 @@ body {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
+.pagination-page {
+  cursor: pointer;
+}
+
+.pagination-disabled {
+  color: gray;
+  cursor: not-allowed;
+}
