:ambulance: [hotfix] : json parse

--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: 'Pretendard', sans-serif;
+  font-family: 'Pretendard', 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
 }
 
 .swiper-wrapper {
